--- a/src/app/shared/components/recipy-constructor/recipy-constructor.component.scss
+++ b/src/app/shared/components/recipy-constructor/recipy-constructor.component.scss
@@ -11,6 +11,7 @@
 .step-time {
   display: flex;
   align-items: center;
+
   ion-icon {
     margin-inline: 7px 3px;
     font-size: 14px;
@@ -33,4 +34,18 @@
     text-align: center;
     min-width: 60px;
   }
+}
+
+.add-product-box {
+  padding: 10px 0;
+  border: 1px solid var(--ion-color-light);
+  h4 {
+    text-align: center;
+    font-size: 16px;
+  }
+}
+
+ion-item {
+  border: 1px solid var(--ion-color-light);
+  --background: white;
 }
