--- a/src/app/shared/components/recipy-constructor/recipy-constructor.component.scss
+++ b/src/app/shared/components/recipy-constructor/recipy-constructor.component.scss
@@ -49,3 +49,7 @@ ion-item {
   border: 1px solid var(--ion-color-light);
   --background: white;
 }
+
+.calculate-portion-btn {
+  align-self: center;
+}
