--- a/src/app/pages/user/components/hidden-recipies/hidden-recipies.component.html
+++ b/src/app/pages/user/components/hidden-recipies/hidden-recipies.component.html
@@ -1,9 +1,12 @@
 <div *ngFor="let recipy of recipies$ | async; let index = index">
-  <app-recipy-short-view [currentUser]="user$ | async" [recipy]="recipy"
-    ></app-recipy-short-view>
-  <app-comments-block [recipyId]="recipy.id"
+  <app-recipy-short-view *ngIf="index < numberOfRecipiesToDisplay" [currentUser]="user$ | async"
+    [recipy]="recipy"></app-recipy-short-view>
+  <app-comments-block *ngIf="index < numberOfRecipiesToDisplay" [recipyId]="recipy.id"
     [recipyName]="recipy.name"></app-comments-block>
 </div>
 <div class="text" *ngIf="!noShowIds.length">
   Немає прихованих рецептів
 </div>
+<ion-infinite-scroll *ngIf="numberOfRecipiesToDisplay <= recipies.length" (ionInfinite)="onIonInfinite($event)">
+  <ion-infinite-scroll-content></ion-infinite-scroll-content>
+</ion-infinite-scroll>
