--- a/src/app/shared/components/recipy-full-view/recipy-full-view.component.html
+++ b/src/app/shared/components/recipy-full-view/recipy-full-view.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="recipy; else noRecipy">
-  <ion-segment *ngIf="!(isLandscape$ | async)" [value]="currentTab" (ionChange)="onTabChange($event)">
+  <ion-segment *ngIf="!(isLandscape$ | async)" [value]="currentTab" (ionChange)="onTabChange($event)" scrollable="true">
     <ion-segment-button *ngFor="let tab of tabs" [value]="tab.value">
       <ion-label>{{ tab.name }}</ion-label>
     </ion-segment-button>
