--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -29,7 +29,7 @@
     <div class="not-registered">
       <h6>Новий користувач?</h6>
       <ion-button expand="full" type="button" (click)="goRegistration()"
-        >Реєстрація</ion-button
+        >Зареєструватись</ion-button
       >
     </div>
   </div>
