--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -21,12 +21,12 @@
         <ion-label>Профіль</ion-label>
       </ion-tab-button>    
     </ng-container>
-    <ng-container *ngIf="!(isLoggedIn$ | async)">
+    <!-- <ng-container *ngIf="!(isLoggedIn$ | async)">
       <ion-tab-button tab="auth">
         <ion-icon name="person-outline"></ion-icon>
         <ion-label>Авторизація</ion-label>
       </ion-tab-button>
-    </ng-container>
+    </ng-container> -->
   </ion-tab-bar>
 </ion-tabs>
 
