--- a/src/app/shared/components/recipy-short-view/recipy-short-view.component.html
+++ b/src/app/shared/components/recipy-short-view/recipy-short-view.component.html
@@ -85,18 +85,18 @@
   <div class="big-screen-card-content">
     <ng-container *ngTemplateOutlet="genericInfo"></ng-container>
     <ion-card-content>
-      <ion-accordion-group [multiple]="true" [value]="['first']">
-        <ion-accordion value="first">
+      <ion-accordion-group [multiple]="true" [value]="['first']" expand="inset">
+        <ion-accordion value="first" toggle-icon="">
           <ion-item slot="header" color="light">
-            <ion-label>Інгридієнти</ion-label>
+            <ion-label class="ion-padding">Інгридієнти</ion-label>
           </ion-item>
           <div class="ion-padding" slot="content">
             <ng-container *ngTemplateOutlet="additionalInfo"></ng-container>
           </div>
         </ion-accordion>
-        <ion-accordion value="second">
+        <ion-accordion value="second" toggle-icon="">
           <ion-item slot="header" color="light">
-            <ion-label>Приготування</ion-label>
+            <ion-label class="ion-padding">Приготування</ion-label>
           </ion-item>
           <div class="ion-padding" slot="content">
             <ng-container *ngTemplateOutlet="preparation"></ng-container>
