--- a/src/app/shared/components/recipy-short-view/recipy-short-view.component.scss
+++ b/src/app/shared/components/recipy-short-view/recipy-short-view.component.scss
@@ -224,6 +224,7 @@ ion-card-content {
   ion-card-content {
     overflow-y: auto;
     padding-block: 20px;
+    padding-right: 20px;
   }
 
   .collections.visible {
