admin can edit all recipies

--- a/src/app/pages/recipies/pages/full-recipy-page/full-recipy-page.component.html
+++ b/src/app/pages/recipies/pages/full-recipy-page/full-recipy-page.component.html
@@ -2,7 +2,7 @@
   <ion-back-button left-button defaultHref="tabs/recipies"></ion-back-button>
   <p title *ngIf="recipy$ | async">{{ (recipy$ | async)!.name }}</p>
   <ion-button
-    *ngIf="isOwnRecipy$ | async"
+    *ngIf="isCanEdit$ | async"
     right-button
     size="small"
     (click)="goEditRecipy()"
