--- a/src/app/pages/recipies/pages/full-recipy-page/full-recipy-page.component.html
+++ b/src/app/pages/recipies/pages/full-recipy-page/full-recipy-page.component.html
@@ -2,6 +2,13 @@
   <ion-back-button left-button defaultHref="tabs/recipies"></ion-back-button>
   <p title *ngIf="recipy$ | async">{{ (recipy$ | async)!.name }}</p>
   <ion-button
+    *ngIf="isShowApproveBtn$ | async"
+    right-button
+    size="small"
+    (click)="approveRecipy()"
+    ><ion-icon name="thumbs-up-outline" slot="icon-only"></ion-icon
+  ></ion-button>
+  <ion-button
     *ngIf="isCanEdit$ | async"
     right-button
     size="small"
