--- a/src/app/filters/components/filters/filters.component.html
+++ b/src/app/filters/components/filters/filters.component.html
@@ -23,7 +23,7 @@
         <app-search-recipies-filter [isClearOnDestroy]="false"></app-search-recipies-filter>
       </div>
       <div class="filter-item">
-        <app-sorting-filter></app-sorting-filter>
+        <app-sorting-filter [isUserLoggedIn]="isUserLoggedIn"></app-sorting-filter>
       </div>
       <div class="filter-item" *ngIf="(userCollections$ | async)?.length">
         <span class="filter-item-title">Показати страви з колекцій:</span>
