show search word in filters widget

--- a/src/app/filters/components/active-filters-widget/active-filters-widget.component.scss
+++ b/src/app/filters/components/active-filters-widget/active-filters-widget.component.scss
@@ -28,4 +28,10 @@ ion-chip {
     padding: 4px 6px;
     border-radius: 5px;
     min-height: auto;
+
+}
+
+.search-bar ion-chip {
+    background-color: #67c23a; 
+    color: white;
 }
