--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ion-app class="app-container">
   <ion-split-pane contentId="main-content" when="false">
-
+<!-- TODO after logout the menu is still visible - check flow -->
     <ion-menu contentId="main-content" *ngIf="user$ | async">
       <ion-content>
 
